src/objects/InternalApproval__c.object
<CustomObject>
    <description>SFDC1-6282: New custom junction object to provide many-to-many relationship between Contracts and Contacts</description>
    <fields>
        <fullName>ApprovalType__c</fullName>
        <description>SFDC1-6282: Approval Type</description>
        <inlineHelpText>Select the Team that you require the approval from</inlineHelpText>
        <label>Approval Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Line Leader</fullName>
                </value>
                <value>
                    <fullName>Consulting Operations</fullName>
                </value>
                <value>
                    <fullName>Contract Management</fullName>
                </value>
                <value>
                    <fullName>Corporate Compliance</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Product Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Leader</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApproverComments__c</fullName>
        <description>SFDC1-7758 : This field holds the Approver Comments</description>
        <inlineHelpText>Approver Comments</inlineHelpText>
        <label>Approver Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ClientName__c</fullName>
        <description>SFDC1-6282: Client Name</description>
        <formula>Contract__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>SFDC1-6282: Contact</description>
        <inlineHelpText>Approver Comments</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Internal Approvals</relationshipLabel>
        <relationshipName>Internal_Approvals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ContractEndDate__c</fullName>
        <description>SFDC1-6282: Contract End Date</description>
        <inlineHelpText>Populates from Contract</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractEndDateformula__c</fullName>
        <description>SFDC1-6840 This field holds the value of Contract End Date</description>
        <formula>Contract__r.EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Populates from Contract</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractNumber__c</fullName>
        <description>SFDC1-6282: Contract Number</description>
        <formula>Contract__r.ContractNumber</formula>
        <inlineHelpText>Contract Number</inlineHelpText>
        <label>Contract#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-6282: Contract Owner</description>
        <inlineHelpText>Contract Created By</inlineHelpText>
        <label>Contract Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Internal_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractStartDate__c</fullName>
        <description>SFDC1-6282: Contract Start Date</description>
        <inlineHelpText>Populates from Contract</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractStartDateformula__c</fullName>
        <description>SFDC1-6840 This field holds the value of Contract Start Date</description>
        <formula>Contract__r.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <description>SFDC1-6282: Contract</description>
        <inlineHelpText>Contract Number</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Internal Approvals</relationshipLabel>
        <relationshipName>Internal_Approvals</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DoNotSendEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-7758 : This fields is for the flag &quot;Do Not Send Email&quot; for Contact</description>
        <inlineHelpText>Please check if Contact should not be sent email</inlineHelpText>
        <label>Do Not Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>SFDC1-6282: Reason</description>
        <inlineHelpText>What requires an approval?</inlineHelpText>
        <label>Reason</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>SFDC1-6282: Status</description>
        <inlineHelpText>Requested or Approved?</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Internal Approval</label>
    <nameField>
        <displayFormat>IA-{000000}</displayFormat>
        <label>Internal Approval Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>